install dll for entity

--- a/src/AuthService.Api/appsettings.json
+++ b/src/AuthService.Api/appsettings.json
@@ -1,7 +1,7 @@
 
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Database=AuthServiceDb;Username=postgres;Password=StrongPassword"
+    "Default": "Host=localhost;Database=AuthServiceDb;Username=postgres;Password=6AngeluS6"
   },
   "Jwt": {
     "Issuer": "AuthService",
