--- a/src/AuthService.Api/Properties/launchSettings.json
+++ b/src/AuthService.Api/Properties/launchSettings.json
@@ -2,11 +2,10 @@
   "profiles": {
     "AuthService.Api": {
       "commandName": "Project",
-      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:51375;http://localhost:51376"
+      "applicationUrl": "http://localhost:51375"
     }
   }
 }
