Refactor JWT setup into infrastructure

--- a/src/AuthService.Api/appsettings.json
+++ b/src/AuthService.Api/appsettings.json
@@ -7,8 +7,6 @@
     "Issuer": "AuthService",
     "Audience": "AuthClients",
     "TokenExpireMinutes": 15,
-    "RefreshTokenExpireDays": 7,
-    "RsaPrivateKeyPath": "keys/private_key.pem",
-    "RsaPublicKeyPath": "keys/public_key.pem"
+    "RefreshTokenExpireDays": 7
   }
 }
